@startuml multi-account-state
' Context: multi-account
' SDD: PROM-MULTI-ACCOUNT
' Revision: 2026-07-27

title Multi-account — client state machine\nfocusUserId owned by MultiAccountMachine

state NoOpenAccounts
state HasOpenAccounts
state FocusSwitching
state FocusedWithSession
state FocusedAwaitingSession : focus impostato,\nsessione in ripristino

[*] --> NoOpenAccounts : ManifestLoaded\n[manifest empty]
[*] --> HasOpenAccounts : ManifestLoaded\n[manifest non-empty]

NoOpenAccounts --> HasOpenAccounts : AccountOpened\n[no session yet]
NoOpenAccounts --> FocusedWithSession : AccountOpened\n[session ok]
NoOpenAccounts --> FocusedWithSession : OpenAccount\n[session ok]

HasOpenAccounts --> FocusedWithSession : FocusActivationCompleted\n[session ok]
HasOpenAccounts --> FocusedAwaitingSession : FocusActivationCompleted\n[no session]
HasOpenAccounts --> FocusSwitching : FocusAccount
HasOpenAccounts --> NoOpenAccounts : AccountClosed\n[ultimo account]

FocusSwitching --> FocusedWithSession : AccountFocused
FocusSwitching --> FocusedAwaitingSession : SessionRestoreFailed

FocusedWithSession --> FocusSwitching : FocusAccount\n[altro account]
FocusedWithSession --> NoOpenAccounts : AccountClosed\n[ultimo account]
FocusedWithSession --> FocusedWithSession : AccountClosed\n[non ultimo, session ok]
FocusedWithSession --> FocusedAwaitingSession : AccountClosed\n[non ultimo, no session]

FocusedAwaitingSession --> FocusSwitching : FocusAccount
FocusedAwaitingSession --> FocusedWithSession : ReconnectFocusedSession\n/ AccountFocused
FocusedAwaitingSession --> NoOpenAccounts : AccountClosed\n[ultimo account]

@enduml
